--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-native-community/masked-view": "0.1.5",
     "@react-navigation/native": "^5.1.4",
     "@react-navigation/stack": "^5.2.9",
+    "axios": "^0.19.2",
     "expo": "~36.0.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
+    "@types/axios": "^0.14.0",
     "@types/expo__vector-icons": "^9.0.1",
     "@types/react": "~16.9.0",
     "@types/react-native": "~0.60.23",
